--- a/src/app/admin/queues/form/form.component.html
+++ b/src/app/admin/queues/form/form.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-row [nzGutter]="24">
-    <nz-col [nzSpan]="14">
+    <nz-col [nzSpan]="16">
       <nz-form-item>
         <nz-form-label nzRequired>队列名称</nz-form-label>
         <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
@@ -39,7 +39,7 @@
         </nz-form-control>
       </nz-form-item>
     </nz-col>
-    <nz-col [nzSpan]="10">
+    <nz-col [nzSpan]="8">
       <nz-form-item>
         <nz-form-label nzTooltipTitle="-1 代表无限制">最大消费者</nz-form-label>
         <nz-form-control>
@@ -64,7 +64,7 @@
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label>存储周期</nz-form-label>
+        <nz-form-label>存储周期（秒）</nz-form-label>
         <nz-form-control>
           <nz-input-number style="width: 100%" formControlName="max_age" [nzMin]="0" [nzStep]="1"></nz-input-number>
         </nz-form-control>
