update: queues detail

--- a/src/app/admin/imessages/detail/detail.component.html
+++ b/src/app/admin/imessages/detail/detail.component.html
@@ -1,6 +1,6 @@
 <nz-layout style="height: 100%; background: transparent">
   <nz-page-header>
-    <nz-page-header-title>授权项目</nz-page-header-title>
+    <nz-page-header-title>授权项目详情</nz-page-header-title>
     <nz-page-header-tags>
       <nz-tag>{{ doc.topic }}</nz-tag>
     </nz-page-header-tags>
