--- a/src/app/admin/imessages/imessages.component.html
+++ b/src/app/admin/imessages/imessages.component.html
@@ -59,7 +59,7 @@
     </ng-container>
   </ng-template>
   <ng-template #detail let-data>
-    <a (click)="openControls(data)">已授权 {{ data.projects.length }} 个项目</a>
+    <a (click)="openDetail(data)">已授权 {{ data.projects.length }} 个项目</a>
   </ng-template>
 </wpx-table>
 
