--- a/src/app/admin/imessages/detail/detail.component.html
+++ b/src/app/admin/imessages/detail/detail.component.html
@@ -1,9 +1,7 @@
 <nz-layout style="height: 100%; background: transparent">
   <nz-page-header>
     <nz-page-header-title>授权项目详情</nz-page-header-title>
-    <nz-page-header-tags>
-      <nz-tag>{{ doc.topic }}</nz-tag>
-    </nz-page-header-tags>
+    <nz-page-header-subtitle>{{ doc.topic }}</nz-page-header-subtitle>
     <nz-page-header-extra>
       <nz-space nzAlign="center">
         <button
