--- a/src/app/admin/workflows/detail/detail.component.html
+++ b/src/app/admin/workflows/detail/detail.component.html
@@ -8,6 +8,7 @@
           <ng-container *ngSwitchCase="'schedule'">定时启动</ng-container>
         </ng-container>
       </nz-tag>
+      <nz-tag>{{ project.name }} </nz-tag>
     </nz-page-header-tags>
     <nz-page-header-extra>
       <button
