--- a/src/app/admin/queues/queues.component.html
+++ b/src/app/admin/queues/queues.component.html
@@ -25,6 +25,7 @@
         </ul>
       </nz-dropdown-menu>
     </ng-container>
+    <button *nzSpaceItem nz-button (click)="openPublish()"> 发布消息 </button>
     <button *nzSpaceItem nz-button nzType="primary" (click)="openForm()"> 新增 </button>
   </nz-space>
 </ng-template>
@@ -41,7 +42,7 @@
       render: name
     },
     {
-      title: '队列主题',
+      title: '主题命名',
       width: '360px',
       render: subjects
     },
