--- a/src/app/admin/queues/detail/detail.component.html
+++ b/src/app/admin/queues/detail/detail.component.html
@@ -29,7 +29,7 @@
         <nz-descriptions-item nzTitle="主题" [nzSpan]="3">
           <nz-space nzAlign="center" nzWrap>
             <ng-container *ngFor="let x of info.config.subjects">
-              <a *nzSpaceItem nz-typography nzCopyable [nzContent]="x" (click)="openPublish(x)"></a>
+              <a *nzSpaceItem (click)="openPublish(x)">{{ x }}</a>
             </ng-container>
           </nz-space>
         </nz-descriptions-item>
