--- a/src/app/common/components/nav/nav.component.html
+++ b/src/app/common/components/nav/nav.component.html
@@ -78,7 +78,7 @@
         <nz-list-empty></nz-list-empty>
       </nz-list>
     </nz-tab>
-    <nz-tab nzTitle="任务(0)" i18n-nzTitle>
+    <nz-tab nzTitle="告警(0)" i18n-nzTitle>
       <nz-list nzItemLayout="horizontal">
         <nz-list-empty></nz-list-empty>
       </nz-list>
