--- a/src/app/admin/projects/form/form.component.html
+++ b/src/app/admin/projects/form/form.component.html
@@ -8,9 +8,12 @@
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
-        <nz-form-label>有效期</nz-form-label>
-        <nz-form-control>
-          <nz-date-picker style="width: 100%" formControlName="expire"></nz-date-picker>
+        <nz-form-label nzRequired>项目类型</nz-form-label>
+        <nz-form-control nzHasFeedback [nzAutoTips]="tips.name">
+          <nz-select formControlName="kind" nzAllowClear nzPlaceHolder="请选择项目类型">
+            <nz-option nzValue="default" nzLabel="标准类型"> </nz-option>
+            <nz-option nzValue="cms" nzLabel="内容类型"> </nz-option>
+          </nz-select>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
@@ -37,7 +40,12 @@
           <input nz-input formControlName="namespace" placeholder="请输入命名空间" />
         </nz-form-control>
       </nz-form-item>
-
+      <nz-form-item>
+        <nz-form-label>有效期</nz-form-label>
+        <nz-form-control>
+          <nz-date-picker style="width: 100%" formControlName="expire"></nz-date-picker>
+        </nz-form-control>
+      </nz-form-item>
       <nz-form-item>
         <nz-form-label nzRequired>状态</nz-form-label>
         <nz-form-control>
