fixed: table model

--- a/src/app/admin/clusters/clusters.component.html
+++ b/src/app/admin/clusters/clusters.component.html
@@ -37,11 +37,13 @@
   [wpxColumns]="[
     {
       title: '集群名称（节点）',
+      key: 'name',
       width: '360px',
       render: name
     },
     {
       title: 'Cpu / 内存 / 存储 / 版本',
+      key: 'detail',
       render: detail
     }
   ]"
