--- a/src/app/admin/imessages/imessages.component.html
+++ b/src/app/admin/imessages/imessages.component.html
@@ -39,11 +39,13 @@
   [wpxColumns]="[
     {
       title: '主题命名',
+      key: 'name',
       width: '360px',
       render: name
     },
     {
       title: '详情',
+      key: 'detail',
       render: detail
     }
   ]"
