--- a/src/app/admin/projects/projects.component.html
+++ b/src/app/admin/projects/projects.component.html
@@ -37,16 +37,19 @@
   [wpxColumns]="[
     {
       title: '项目名称',
+      key: 'name',
       width: '360px',
       render: name
     },
     {
       title: 'OpenAPI 密钥',
+      key: 'openapi',
       width: '240px',
       render: openapi
     },
     {
       title: '详情',
+      key: 'detail',
       render: detail
     }
   ]"
