--- a/src/app/admin/queues/queues.component.html
+++ b/src/app/admin/queues/queues.component.html
@@ -38,21 +38,25 @@
   [wpxColumns]="[
     {
       title: '队列名称',
+      key: 'name',
       width: '240px',
       render: name
     },
     {
       title: '主题命名',
+      key: 'subjects',
       width: '240px',
       render: subjects
     },
     {
       title: '所属项目',
+      key: 'project',
       width: '240px',
       render: project
     },
     {
       title: '详情',
+      key: 'detail',
       width: '600px',
       render: detail
     }
