--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -57,6 +57,7 @@
   [wpxColumns]="[
     {
       title: '电子邮件',
+      key: 'username',
       width: '320px',
       render: username
     },
@@ -73,6 +74,7 @@
     },
     {
       title: '近期登录 (会话数)',
+      key: 'history',
       width: '240px',
       render: history
     },
