--- a/src/app/admin/workflows/workflows.component.html
+++ b/src/app/admin/workflows/workflows.component.html
@@ -27,16 +27,19 @@
   [wpxColumns]="[
     {
       title: '工作流名称',
+      key: 'name',
       width: '360px',
       render: name
     },
     {
       title: '所属项目',
+      key: 'project',
       width: '240px',
       render: project
     },
     {
       title: '详情',
+      key: 'detail',
       render: detail
     }
   ]"
