--- a/src/app/audit/logined/logined.component.html
+++ b/src/app/audit/logined/logined.component.html
@@ -105,21 +105,25 @@
     },
     {
       title: '用户',
+      key: 'user',
       width: '240px',
       render: user
     },
     {
       title: '来源',
+      key: 'source',
       width: '240px',
       render: source
     },
     {
       title: '信息',
+      key: 'detail',
       width: '600px',
       render: detail
     },
     {
       title: 'User Agent',
+      key: 'userAgent',
       width: '1000px',
       render: userAgent
     }
