--- a/src/app/audit/operates/operates.component.html
+++ b/src/app/audit/operates/operates.component.html
@@ -105,11 +105,13 @@
     },
     {
       title: '用户',
+      key: 'user',
       width: '240px',
       render: user
     },
     {
       title: '详情',
+      key: 'detail',
       render: detail
     }
   ]"
