--- a/src/app/common/components/nav/nav.component.html
+++ b/src/app/common/components/nav/nav.component.html
@@ -64,7 +64,7 @@
   <nz-tabset style="width: 360px" [nzTabBarExtraContent]="actions">
     <ng-template #actions>
       <nz-space>
-        <!--        <app-translation *nzSpaceItem [simple]="true"></app-translation>-->
+        <app-translation *nzSpaceItem [simple]="true"></app-translation>
         <button *nzSpaceItem nz-button nzType="text" nz-tooltip="个人中心" i18n-nz-tooltip (click)="profile()">
           <i nz-icon nzType="user"></i>
         </button>
