--- a/src/app/admin/workflows/schedules/keys/keys.component.html
+++ b/src/app/admin/workflows/schedules/keys/keys.component.html
@@ -1,6 +1,6 @@
 <nz-layout style="height: 100%; background: transparent">
   <nz-page-header>
-    <nz-page-header-title>运行中的 Cron</nz-page-header-title>
+    <nz-page-header-title>服务中的任务</nz-page-header-title>
     <nz-page-header-subtitle>{{ doc.name }}</nz-page-header-subtitle>
   </nz-page-header>
 
